--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,7 @@ body {
 }
 
 #content {
-  padding: 20px;
+  padding: 40px;
   background: rgba(255,255,255,.85);
 }
 
@@ -30,18 +30,18 @@ h1, h2 {
 }
 
 h1 {
-  font-size: 3.5em;
+  font-size: 6em;
   margin-bottom: 0;
 }
 
 h2 {
-  font-size: 1.5em;
-  margin-top: .5em;
+  font-size: 3em;
+  margin-top: 1.0em;
 }
 
 h3 {
   font-family: 'Gabriela', serif;
-  font-size: 1.5em;
+  font-size: 2.5em;
   margin-top: .5em;
 }
 
@@ -52,7 +52,7 @@ img {
 }
 
 p {
-  font-size: 1em;
+  font-size: 1.75em;
 }
 
 a {
